# atlas-sdk

./: .gitignore  Anchor.toml  PRODUCTION-GUIDE.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
cli/: README.md  package.json  tsconfig.json
cli/src/: client.ts  config.ts  index.ts
cli/src/commands/: admin.ts  closeWorld.ts  collect.ts  (+7 more)
core/: package.json  tsconfig.json
core/src/: constants.ts  errors.ts  index.ts  pdas.ts  templates.ts  types.ts  utils.ts
create-app/: package.json
create-app/template/: README.md  next.config.ts  package.json  tsconfig.json
docs/: index.html
examples/: quickstart.ts
mcp/: README.md  package.json  tsconfig.json
mcp/src/: client.ts  config.ts  index.ts
programs/atlas-sdk/: Cargo.toml
programs/atlas-sdk/src/: errors.rs  events.rs  lib.rs
programs/atlas-sdk/src/state/: global_config.rs  leaderboard.rs  mod.rs  player.rs  whitelist.rs  world_config.rs  world_state.rs
react/: package.json  tsconfig.json
react/src/: AtlasProvider.tsx  index.ts  theme.ts  useCollect.ts  useLeaderboard.ts  usePlayer.ts  useWorld.ts
scripts/: migrate-global-config.ts  test-epoch-reset.ts  test-mainnet-readiness.ts  test-private-world.ts  test-sdk.ts  test-security.ts
sdk/: package.json
sdk/src/: AtlasClient.ts  LeaderboardClient.ts  PlayerClient.ts  ResourceClient.ts  WorldClient.ts  idl.json  index.ts
tests/: admin-controls.test.ts  core-utils.test.ts  epoch-lifecycle.test.ts  players-resources-leaderboard.test.ts  private-world-whitelist.test.ts  protocol-and-worlds.test.ts
(+10 files in other folders)
