[package]
name = "atlas"
version = "0.3.0"
description = "Atlas World Protocol — Persistent World SDK for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "atlas"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["event-cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
